
- Fixed: When the value of the alpha field was not a valid number in the GUI,
  an infite loop of warning dialogs popped up.
  
- Fixed: Loading old graph objects from version 0.6.x, i.e. from before August 2011,
  without package 'graph' asks to install this package. If this is refused or
  the installation failed, bad things happened like a complete crash of the current
  R session.
  
- JGR is yet another necessary package, but Mac OS support and stability 
  improves.

- Improved documentation.

- Using RCallServicesREngineWrapper to eval each expression in the environment 
  gMCP:::gMCPenv instead of the global environment. 


Changes in version 0.8-5 (18-07-2013)
=====================================

- Removed dangerous parameter seed from function rqmvnorm and calcPower.

- POSIX conforming Makefile fixes problems under Solaris.

- Fix for problems with knitr 1.3.

- Fixed: The rarly used offset parameter did not work well with the new edges 
   consisting of arcs in TikZ.

 24 files changed, 88 insertions(+), 248 deletions(-)


Changes in version 0.8-4 (15-07-2013)
=====================================

- R's base function chol for the Choleski Decomposition now defaults to LAPACK 
  in R 3.0 resulting in meaningless results for not non-negative definite 
  matrices (without any numerical tolerance! And in R devel it is by now defunct: 
  ‘chol(pivot = TRUE, LINPACK = TRUE)’ is defunct.). 
  Therefore power calculations for only semi-positive definite correlation 
  matrices could have been off under R 3.0 in previous versions.
  We switched to the singular value decomposition.

- Fixed: List of user defined power functions doesn't need to have names.

- Further work on the experimental entangled graphs feature.

- Since the vignettes were moved from gMCP/inst/doc to gMCP/vignettes
  most likely they will only be build with R >= 2.14.0.

- Moved MASS, PolynomF, multcomp, lattice, mvtnorm, Matrix, CommonJavaJars and 