@@ -8,11 +8,19 @@ Changes in version 0.8-6 (??-0?-2013)
   without package 'graph' asks to install this package. If this is refused or
   the installation failed, bad things happened like a complete crash of the current
   R session.
+
+- Function 'graph2latex' gains an argument 'scaleText'. If TRUE (default)
+  a scalebox is used in LaTeX instead of the optional parameter 'scale'
+  from the tikzpicture environment.
   
 - JGR is yet another necessary package, but Mac OS support and stability 
   improves.
 
-- Improved documentation.
+- Improved documentation. Some Rd files are built by a patched version of
+  roxygen2 that escapes "\" in arguments: 
+  install_github("roxygen2", username="yihui")
+  (Yihui's pull request is now open for 9 months: 
+   https://github.com/klutometis/roxygen/pulls )
 
 - Using RCallServicesREngineWrapper to eval each expression in the environment 
   gMCP:::gMCPenv instead of the global environment. 
